# TSP-G-Code-Optimizer

./: .gitignore  Cargo.toml  README.md  app.rs  config.rs  gcode.rs  quick_math.rs
g-code_examples/: dice_CuraEngine.gcode  dice_PrusaSlicer.gcode  dice_Slic3r.gcode  fracatl.STL  fractal_Slic3r.gcode  gear_CuraEngine.gcode  gear_PrusaSlicer.gcode  gear_Slic3r.gcode  honeycomb_CuraEngine.gcode  honeycomb_PrusaSlicer.gcode  honeycomb_Slic3r.gcode  open_honeycomb.stl
