[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
fern = "0.6.2"
indicatif = "0.17.8"
log = "0.4.21"
num-format = "0.4.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"

[[bin]]
name = "app"
path = "app.rs"
